# qa40x-rs

./: .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY.md  THIRD_PARTY_LICENSES.html  firmware-registry.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.e2e.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml
doc/: bench-ab.md  device-notes.md
doc/screenshots/: README.md
packaging/dmg/: README.txt  settings.py
packaging/linux/: 99-qa40x.rules  postinstall.sh  postremove.sh
src/: app.css  app.ts  main.ts
src-tauri/: Cargo.toml  about.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/examples/: bench_ab.rs  bench_stream_payload.rs  hw_calibrate.rs  hw_cancel_disconnect.rs  hw_fftsweep.rs  hw_input_relay_envelope.rs  hw_keepalive.rs  hw_level_reference.rs  hw_level_reference_frame.rs  hw_loopback.rs  hw_readstate.rs  hw_relay_envelope.rs  hw_relay_settle.rs  hw_run_keepalive.rs  hw_script.rs  hw_stress.rs  hw_thd.rs  record_fixtures.rs  rest_hw.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dashboard.rs  firmware.rs  flash.rs  inno.rs  lib.rs  measurement.rs  mixer.rs  rest.rs  script.rs  sources.rs  stream.rs
src-tauri/src/audio/: analysis.rs  fft.rs  frequency_response.rs  mod.rs  spectrum.rs  validation.rs  weighting.rs  wow_flutter.rs
src-tauri/src/measurements/: filters.rs  levels.rs  mod.rs  spectral.rs  units.rs  weighting.rs
src-tauri/src/qa40x/: device.rs  error.rs  mod.rs  register.rs  settle.rs  transport.rs  types.rs
src-tauri/src/storage/: error.rs  mod.rs
src-tauri/src/utils/: mod.rs  signal_generator.rs
src-tauri/tests/: virtual_device.rs
src/chart/: canvas.ts  renderer.ts  scope.ts  spectrum.ts  sweep.ts  theme.ts
src/core/: measure.test.ts  measure.ts  model.ts  routing.test.ts  routing.ts  script-examples.test.ts  script-examples.ts  scriptrole.ts  tonestats.test.ts  tonestats.ts  transforms.ts  units.test.ts  units.ts
src/data/: chains.test.ts  chains.ts  frames.ts  measures.ts
src/ipc/: channel-mock.test.ts  ipc.ts  stream.ts
src/store/: persist.test.ts  persist.ts  state.ts  store.test.ts  store.ts  templates.ts
src/styles/: base.css  tokens.css
(+84 files in other folders)
